# federated-REGAL

./: .gitignore  FL_MVP.ipynb  F_REGAL_Full.ipynb  Regal_EXAMPLE_Deezer.ipynb  pyproject.toml
federated-REGAL/: aligning.py  configuration.py  extract.py  representation.py
reports/final/slides/: main.fdb_latexmk  main.fls  main.tex
reports/proposal/: appendix.tex  checklist.tex  egbib.bib  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  neurips_2024.sty
reports/proposal/section/: conclusion.tex  experiment.tex  introduction.tex  methodology.tex  related_work.tex
reports/proposal/slides/: main.fdb_latexmk  main.fls  main.tex
